--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "docker-https-proxy",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "a simple docker container to proxy requests inside your docker network",
   "repository": "https://github.com/shroomlife/docker-https-proxy",
   "author": "shroomlife",
   "license": "Apache-2.0",
   "scripts": {
     "start": "node src/index",
+    "dev": "nodemon src/index",
     "test": "jest",
     "build": "docker build . --tag shroomlife/docker-https-proxy:latest"
   },
@@ -17,6 +18,10 @@
     "request": "2.88.0"
   },
   "devDependencies": {
-    "jest": "24.9.0"
+    "jest": "24.9.0",
+    "nodemon": "1.19.4"
+  },
+  "resolutions": {
+    "handlebars": ">= 4.3.0"
   }
 }
