added security fix for kind-of

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "resolutions": {
     "handlebars": ">= 4.3.0",
     "acorn": ">= 6.4.1",
-    "minimist": ">= 1.2.2"
+    "minimist": ">= 1.2.2",
+    "kind-of": ">= 6.0.3"
   }
 }
