--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "docker-https-proxy",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "a simple docker container to proxy requests inside your docker network",
   "repository": "https://github.com/shroomlife/docker-https-proxy",
-  "author": "shroomlife",
   "license": "Apache-2.0",
+  "author": "shroomlife",
   "scripts": {
-    "start": "node src/index",
+    "build": "docker build . --tag shroomlife/docker-https-proxy:latest",
     "dev": "nodemon src/index",
-    "test": "jest",
     "lint": "eslint ./src/**/*.js",
-    "build": "docker build . --tag shroomlife/docker-https-proxy:latest"
+    "start": "node src/index",
+    "test": "jest"
+  },
+  "resolutions": {
+    "acorn": ">= 6.4.1",
+    "dot-prop": ">= 4.2.1",
+    "handlebars": ">= 4.3.0",
+    "kind-of": ">= 6.0.3",
+    "lodash": ">= 4.17.19",
+    "minimist": ">= 1.2.2",
+    "yargs-parser": ">= 13.1.2"
   },
   "dependencies": {
     "body-parser": "1.19.0",
@@ -19,12 +28,5 @@
   "devDependencies": {
     "jest": "24.9.0",
     "nodemon": "1.19.4"
-  },
-  "resolutions": {
-    "handlebars": ">= 4.3.0",
-    "acorn": ">= 6.4.1",
-    "minimist": ">= 1.2.2",
-    "kind-of": ">= 6.0.3",
-    "lodash": ">= 4.17.19"
   }
 }
