--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -3,7 +3,7 @@ name: docker
 on:
   push:
     branches:
-    - master
+    - main
 
 jobs:
 
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
       with:
-        ref: master
+        ref: main
     - name: Install Dependencies
       run: yarn install
     - name: Start Server Test
