--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docker-https-proxy",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "a simple docker container to proxy requests inside your docker network",
   "repository": "https://github.com/shroomlife/docker-https-proxy",
   "license": "Apache-2.0",
@@ -16,6 +16,7 @@
     "acorn": ">= 6.4.1",
     "dot-prop": ">= 4.2.1",
     "handlebars": ">= 4.3.0",
+    "ini": ">= 1.3.6",
     "kind-of": ">= 6.0.3",
     "lodash": ">= 4.17.19",
     "minimist": ">= 1.2.2",
