--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docker-https-proxy",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "a simple docker container to proxy requests inside your docker network",
   "repository": "https://github.com/shroomlife/docker-https-proxy",
   "license": "Apache-2.0",
@@ -16,20 +16,21 @@
     "acorn": ">= 6.4.1",
     "dot-prop": ">= 4.2.1",
     "handlebars": ">= 4.3.0",
+    "hosted-git-info": ">= 2.8.9",
     "ini": ">= 1.3.6",
     "kind-of": ">= 6.0.3",
-    "lodash": ">= 4.17.19",
+    "lodash": ">= 4.17.21",
     "minimist": ">= 1.2.2",
     "node-notifier": ">= 8.0.1",
+    "ws": ">= 7.4.6",
     "y18n": "4.0.1",
     "yargs-parser": ">= 13.1.2"
   },
   "dependencies": {
-    "body-parser": "1.19.0",
     "express": "4.17.1"
   },
   "devDependencies": {
-    "jest": "24.9.0",
-    "nodemon": "1.19.4"
+    "jest": "27.0.3",
+    "nodemon": "2.0.7"
   }
 }
