--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docker-https-proxy",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "a simple docker container to proxy requests inside your docker network",
   "repository": "https://github.com/shroomlife/docker-https-proxy",
   "license": "Apache-2.0",
@@ -24,7 +24,8 @@
     "node-notifier": ">= 8.0.1",
     "ws": ">= 7.4.6",
     "y18n": ">= 4.0.1",
-    "yargs-parser": ">= 13.1.2"
+    "yargs-parser": ">= 13.1.2",
+    "tmpl": ">=1.0.5"
   },
   "dependencies": {
     "express": "4.17.1"
